# storage/api-docs/api-docs.json
@@ -7,6 +7,99 @@
     "host": "",
     "basePath": "/api/v1",
     "paths": {
+        "/banners": {
+            "get": {
+                "tags": [
+                    "banner"
+                ],
+                "summary": "\u5e7f\u544a\u56fe",
+                "description": "\u5e7f\u544a\u56fe",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "codes",
+                        "in": "query",
+                        "description": "banner \u7801\uff0c\u6d3b\u52a8\u4f20activity",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u7ed3\u679c\u96c6",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "description": "\u72b6\u6001\u7801",
+                                    "type": "integer"
+                                },
+                                "message": {
+                                    "description": "\u72b6\u6001\u4fe1\u606f",
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "code_name": {
+                                                "type": "array",
+                                                "items": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "description": "banner ID",
+                                                            "type": "integer"
+                                                        },
+                                                        "title": {
+                                                            "description": "\u6807\u9898",
+                                                            "type": "string"
+                                                        },
+                                                        "introduction": {
+                                                            "description": "\u5907\u6ce8",
+                                                            "type": "string"
+                                                        },
+                                                        "code": {
+                                                            "description": "banner code",
+                                                            "type": "string"
+                                                        },
+                                                        "picture_url": {
+                                                            "description": "\u56fe\u7247\u5730\u5740",
+                                                            "type": "string"
+                                                        },
+                                                        "url": {
+                                                            "description": "\u8df3\u8f6c\u5730\u5740",
+                                                            "type": "string"
+                                                        },
+                                                        "link_type": {
+                                                            "description": "\u8df3\u8f6c\u7c7b\u578b 0-\u5185\u94fe 1-\u5916\u94fe",
+                                                            "type": "string"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": [
+                            "scope"
+                        ]
+                    }
+                ]
+            }
+        },
         "/social-pools": {
             "get": {
                 "tags": [
